# duck-cpp

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  flake.nix
.cache/clangd/index/: allocator.cpp.AA2B0DEA17B9B721.idx  allocator.cpp.CC6A9EB807D9009E.idx  allocator.hpp.B7559B992E01AAE8.idx  impl.hpp.AFEC0AEDBFAA1CDE.idx  typedefs.hpp.7834AD80C1EDE5B1.idx
cmd/: main.cpp
examples/: allocator.cpp  dynamic_array.cpp  simple.cpp  test.cpp
include/: allocator.hpp  dynamic_array.hpp  impl.hpp  mem.hpp  slice.hpp  storage.hpp  typedefs.hpp  typetraits.hpp
lib/: karol.hpp
tests/: allocator.cpp
